--- a/ComputerMonitoringSystem/IssueFeatureValueEditWindow.xaml
+++ b/ComputerMonitoringSystem/IssueFeatureValueEditWindow.xaml
@@ -2,7 +2,33 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Edit Issue Feature Value" Height="300" Width="400">
-    <Grid Margin="10">
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="#FF4CAF50"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontFamily" Value="Segoe UI"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#FF3F51B5"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#FF303F9F"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+    <Grid Background="#F5F5F5" Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -13,12 +39,12 @@
         <TextBlock Text="Issue" Grid.Row="0"/>
         <ComboBox x:Name="cbIssues" Grid.Row="1" Grid.Column="1" Margin="5" DisplayMemberPath="Name" SelectedValuePath="Id"/>
 
-        <TextBlock Text="Feature Value" Grid.Row="2" Margin="0,0,0,184" Grid.RowSpan="2"/>
-        <ComboBox x:Name="cbFeatureValues" Grid.Row="2" Margin="5,16,5,178" DisplayMemberPath="Value" SelectedValuePath="Id" Grid.RowSpan="2"/>
+        <TextBlock Text="Feature Value" Grid.Row="2"/>
+        <ComboBox x:Name="cbFeatureValues" Grid.Row="3" Margin="5,5,5,0" DisplayMemberPath="Value" SelectedValuePath="Id"/>
 
         <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button x:Name="btnSave" Content="Save" Margin="0,0,10,0" Click="btnSave_Click" Height="136"/>
-            <Button x:Name="btnCancel" Content="Cancel" Click="btnCancel_Click" Height="135"/>
+            <Button x:Name="btnSave" Content="Save" Margin="0,0,10,0" Click="btnSave_Click"/>
+            <Button x:Name="btnCancel" Content="Cancel" Click="btnCancel_Click"/>
         </StackPanel>
     </Grid>
 </Window>
