--- a/ComputerMonitoringSystem/IssueFeatureValuesWindow.xaml
+++ b/ComputerMonitoringSystem/IssueFeatureValuesWindow.xaml
@@ -5,7 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="Issue Feature Values" Height="450" Width="800">
-    <Grid>
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="#FF4CAF50"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontFamily" Value="Segoe UI"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#FF3F51B5"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#FF303F9F"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+    <Grid Background="#F5F5F5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -13,7 +39,6 @@
 
         <StackPanel Orientation="Horizontal" Margin="5">
             <Button x:Name="btnAdd" Content="Add" Click="btnAdd_Click" Margin="5"/>
-            <Button x:Name="btnEdit" Content="Edit" Click="btnEdit_Click" Margin="5"/>
             <Button x:Name="btnDelete" Content="Delete" Click="btnDelete_Click" Margin="5"/>
         </StackPanel>
 
@@ -26,4 +51,3 @@
         </DataGrid>
     </Grid>
 </Window>
-
