--- a/ComputerMonitoringSystem/IssuesWindow.xaml
+++ b/ComputerMonitoringSystem/IssuesWindow.xaml
@@ -2,14 +2,41 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="IssueWindow" Height="450" Width="800">
-    <Grid>
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="#FF4CAF50"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontFamily" Value="Segoe UI"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#FF3F51B5"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#FF303F9F"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+    <Grid Background="#F5F5F5" Margin="0,-7,-43,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="8*" />
+            <RowDefinition Height="11*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10">
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10,10,10,10">
             <Label Content="Название неполадки:" />
             <TextBox x:Name="tbIssueName" Width="200" Margin="5,0" />
             <Label Content="Описание неполадки:" />
@@ -17,9 +44,9 @@
             <Button x:Name="btnAddIssue" Content="Добавить неполадку" Click="btnAddIssue_Click" Margin="5,0" />
         </StackPanel>
 
-        <Label Grid.Row="1" Content="Список имеющихся неполадок:" Margin="10" />
+        <Label Grid.Row="1" Content="Список имеющихся неполадок:" Margin="10,10,10,10" />
 
-        <ListBox x:Name="listBoxIssues" Grid.Row="2" Margin="10">
+        <ListBox x:Name="listBoxIssues" Grid.Row="2" Margin="10,10,10,10" Grid.RowSpan="2">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
