--- a/ComputerMonitoringSystem/NormalFeatureValueEditWindow.xaml
+++ b/ComputerMonitoringSystem/NormalFeatureValueEditWindow.xaml
@@ -2,7 +2,33 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Select Normal Feature Value" Height="300" Width="400">
-    <Grid Margin="10">
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="#FF4CAF50"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontFamily" Value="Segoe UI"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#FF3F51B5"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="#FF303F9F"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+    <Grid Background="#F5F5F5" Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -13,8 +39,8 @@
         <ComboBox x:Name="cbNormalFeatureValues" Grid.Row="1" Grid.Column="1" Margin="5" DisplayMemberPath="Value" SelectedValuePath="Id"/>
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button x:Name="btnSelect" Content="Select" Margin="0,0,10,0" Click="btnSelect_Click"/>
-            <Button x:Name="btnCancel" Content="Cancel" Click="btnCancel_Click"/>
+            <Button x:Name="btnSelect" Content="Select" Margin="0,0,10,0" Click="btnSelect_Click" Width="41"/>
+            <Button x:Name="btnCancel" Content="Cancel" Click="btnCancel_Click" Width="44"/>
         </StackPanel>
     </Grid>
 </Window>
