--- a/ComputerMonitoringSystem/IssueFeatureValuesWindow.xaml
+++ b/ComputerMonitoringSystem/IssueFeatureValuesWindow.xaml
@@ -1,10 +1,7 @@
 ﻿<Window x:Class="ComputerMonitoringSystem.IssueFeatureValuesWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="Issue Feature Values" Height="450" Width="800">
+        Title="Issue Feature Values" Height="400" Width="600">
     <Window.Resources>
         <Style TargetType="Button">
             <Setter Property="Background" Value="#FF4CAF50"/>
@@ -31,23 +28,32 @@
             </Setter>
         </Style>
     </Window.Resources>
-    <Grid Background="#F5F5F5">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+    <Grid Background="#F5F5F5" Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="290*"/>
+            <ColumnDefinition Width="71*"/>
+            <ColumnDefinition Width="219*"/>
+        </Grid.ColumnDefinitions>
 
-        <StackPanel Orientation="Horizontal" Margin="5">
-            <Button x:Name="btnAdd" Content="Add" Click="btnAdd_Click" Margin="5"/>
-            <Button x:Name="btnDelete" Content="Delete" Click="btnDelete_Click" Margin="5"/>
+        <StackPanel Grid.Column="0">
+            <TextBlock Text="Select Issue"/>
+            <ComboBox x:Name="cbIssues" Margin="0,0,0,10" DisplayMemberPath="Name" SelectedValuePath="Id"/>
+
+            <TextBlock Text="All Feature Values"/>
+            <ListBox x:Name="lbAllFeatureValues" Height="200" DisplayMemberPath="Value"/>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button x:Name="btnAdd" Content="Add" Margin="0,0,10,0" Click="btnAdd_Click"/>
+            </StackPanel>
         </StackPanel>
 
-        <DataGrid x:Name="dataGridIssueFeatureValues" Grid.Row="1" AutoGenerateColumns="False" CanUserAddRows="False" SelectionMode="Single">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True" Width="Auto"/>
-                <DataGridTextColumn Header="Issue" Binding="{Binding IssueName}" IsReadOnly="True" Width="*"/>
-                <DataGridTextColumn Header="Feature Value" Binding="{Binding FeatureValue}" IsReadOnly="True" Width="*"/>
-            </DataGrid.Columns>
-        </DataGrid>
+        <StackPanel Grid.Column="1" Grid.ColumnSpan="2">
+            <TextBlock Text="Issue Feature Values" Height="22"/>
+            <ListBox x:Name="lbIssueFeatureValues" Height="243" DisplayMemberPath="FeatureValue"/>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button x:Name="btnDelete" Content="Delete" Click="btnDelete_Click" RenderTransformOrigin="0.613,3.797"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
